// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pin external dependencies check getUnPinnedExternalDepsFromPackageJSONFiles() should return an array of all the unpinned external deps across every provided package.json file 1`] = `
[
  {
    "dep": "lodash",
    "name": "mock-package",
  },
]
`;

exports[`pin external dependencies check getUnPinnedExternalDepsFromPackageJSONFiles() should return an array of all the unpinned external deps across every provided package.json file 2`] = `
[
  {
    "dep": "csstype",
    "name": "mock-package-2",
  },
  {
    "dep": "lodash",
    "name": "mock-package-2",
  },
]
`;

exports[`pin external dependencies check getUnPinnedExternalDepsFromPackageJSONFiles() should return an array of all the unpinned external deps across every provided package.json file 3`] = `[]`;

exports[`pin external dependencies check getUnPinnedExternalDepsFromPackageJSONFiles() should return an array of all the unpinned external deps across every provided package.json file 4`] = `
[
  {
    "dep": "lodash",
    "name": "mock-package",
  },
]
`;

exports[`pin external dependencies check getUnPinnedExternalDepsFromPackageJSONFiles() should return an array of all the unpinned external deps across every provided package.json file 5`] = `
[
  {
    "dep": "lodash",
    "name": "mock-package",
  },
  {
    "dep": "csstype",
    "name": "mock-package-2",
  },
  {
    "dep": "lodash",
    "name": "mock-package-2",
  },
]
`;
